# PsiSoft

./: .gitignore  Caddyfile  Entrevista.md  README.md  docker-compose.yml  playwright.config.js
backend/: .dockerignore  Cargo.toml  Dockerfile
backend/migrations/: 20260607000000_initial_schema.sql  20260615000958_create_agendamento_tables.sql  20260615011000_create_paciente_tables.sql
backend/src/: main.rs
backend/src/api/: agendamento.rs  auth.rs  mod.rs  paciente.rs
backend/src/domain/: agendamento.rs  mod.rs  paciente.rs  user.rs
backend/src/events/: mod.rs
backend/src/services/: agendamento.rs  auth.rs  email.rs  mod.rs  paciente.rs
docs/01 - Levantamento de Requisitos/: Dicionário de Dados.docx  Lista de Requisitos (Consolidada).md  Matriz de Rastreabilidade de Requisitos.csv  Matriz de Rastreabilidade de Requisitos.md  Matriz de Rastreabilidade de Requisitos.xlsx
docs/01 - Levantamento de Requisitos/01 - Planejamento/: Task - 01.md  Task - 02.md  Task - 03.md
docs/01 - Levantamento de Requisitos/MER/: script_PsiSoft.sql
docs/Tasks/: Task - 01.md
docs/architecture/: 00-introducao-arquitetura.md
docs/architecture/c1-alto-nivel/: 01-implantacao.md  02-diagramas-atividade.md
docs/architecture/c2-design-detalhado/: 02-descricoes-casos-uso.md
docs/planning/: task-03.md  task-FINAL.md
frontend/: agendamentos.html  cadastro-paciente.html  index.html  login-style.css  login.html  pacientes.html  perfil.html  registro.html  style.css
review/: Ordem-Impressao.md  Plano-Finalizacao.md
tests/e2e/: auth.spec.js
(+55 files in other folders)
